--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "vinyl-buffer": "^1.0.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "gulp watch"
   },
   "author": "",
   "license": "ISC"
